implemented annotations for parallel parameterized junit test runner